# manipulator_mpc

./: README.md
core/: interfaces.py
labs/lab0/: lab0Utils.py
labs/lab1/: visualize.py
labs/lab2/: follow.py
labs/lab3/: visualize.py
labs/lab4/: Time_test_file  demo.py  planning_demo.py  rrt_mpc.py  test.ipynb
lib/: PlanarIK.py  arm_sim.py  astar.py  calculateFK.py  detectCollision.py  loadmap.py  mpc.py  robotic_arm.py  rrt.py
lib/convex_set/: robotic_arm.py
maps/: map4.txt
rename_to__meam520_labs/core/: safety.py  utils.py
rename_to__meam520_labs/labs/final/: final.py
rename_to__meam520_labs/lib/: IK_velocity.py  arm_sim.py  calcJacobian.py  demo_pot.py  final_project.ipynb  mpc.py  potentialFieldPlanner.py  robotic_arm.py  solveIK.py
rename_to__meam520_labs/maps/: emptyMap.txt  map1.txt  map2.txt  map3.txt  map4.txt
rename_to__meam520_labs/ros/meam520_labs/: CMakeLists.txt  package.xml
rename_to__meam520_labs/ros/meam520_labs/config/: detections.rviz  lab2.rviz  mpc_final.rviz  turntable_controller.yaml
rename_to__meam520_labs/ros/meam520_labs/launch/: lab1.launch  lab2.launch  lab4.launch  mpc_final.launch  object.launch  single.launch  static_detections.launch  turntable.launch
rename_to__meam520_labs/ros/meam520_labs/scripts/: block_spawner.py  draw.py  plugin_obs.py  worldConverter.py
rename_to__meam520_labs/ros/meam520_labs/urdf/: cube.urdf  tag.sdf  turntable.xacro
rename_to__meam520_labs/ros/meam520_labs/worlds/: empty.world  emptymap.world  final.world  map1.world  map3.world  map4.world
ros/meam520_labs/config/: block.rviz  (+3 more)
(+42 files in other folders)
